--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MatchMate</string>
+
+    <!-- region messages -->
+    <string name="no_data_found">No data found.</string>
+    <string name="internet_not_available">Internet not available.</string>
+    <string name="something_went_wrong">Something went wrong.</string>
+    <!-- endregion -->
 </resources>
